[ALLI-7618] Prevent titles from overflowing in grid view (#2381)
Chrome doesn't handle overflow properly if the element is not positioned and contains an absolutely positioned sr-only element.

--- a/themes/finna2/less/finna/grid-view.less
+++ b/themes/finna2/less/finna/grid-view.less
@@ -86,11 +86,11 @@
     }
     h2.title {
       font-size: 1.15em;
-      display: inline-block;
       text-overflow: ellipsis;
+      // Position: relative makes ellipsis work with absolute elements in Chrome
+      position: relative;
       white-space: nowrap;
       overflow: hidden;
-      width: 99%;
     }
     a.fulltext {
       width: 100%;
